--- a/hafta2.html
+++ b/hafta2.html
@@ -23,6 +23,13 @@
     <h2>Bölüm 1: Kaybolan Gün</h2>
     <img src="hafta2 images/resim1.jpg" alt="Kaybolan Gün" style="max-width:100%; height:auto;">
     <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı. Ancak bu sabah, her zamankinden farklıydı. Gökyüzü gri bulutlarla kaplıydı ve rüzgar, ince bir hüzünle esiyordu. Elif, köyün dışında yer alan ormana doğru yürümeye karar verdi. Ormanın derinliklerinde kaybolmuş eski bir efsanenin peşindeydi. Efsaneye göre, ormanın derinliklerinde kaybolan bir gün, tekrar bulunmayı bekliyordu.</p>
+<figure>
+  <figcaption>1. Bölümü Dinle:</figcaption>
+  <audio controls src="/hafta 2 sesler/1.mp3">
+    <a href="/hafta 2 sesler/1.mp3"> Download audio </a>
+  </audio>
+</figure>
+
 </section>
 
 <section id="bolum2">
