--- a/hafta2.html
+++ b/hafta2.html
@@ -25,8 +25,8 @@
     <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı. Ancak bu sabah, her zamankinden farklıydı. Gökyüzü gri bulutlarla kaplıydı ve rüzgar, ince bir hüzünle esiyordu. Elif, köyün dışında yer alan ormana doğru yürümeye karar verdi. Ormanın derinliklerinde kaybolmuş eski bir efsanenin peşindeydi. Efsaneye göre, ormanın derinliklerinde kaybolan bir gün, tekrar bulunmayı bekliyordu.</p>
 <figure>
   <figcaption>1. Bölümü Dinle:</figcaption>
-  <audio controls src="/hafta2sesler/1.mp3">
-    <a href="/hafta2sesler/1.mp3"> Download audio </a>
+  <audio controls src="/hafta2sesler/m1.mp3">
+    <a href="/hafta2sesler/m1.mp3"> Download audio </a>
   </audio>
 </figure>
 
