--- a/hafta3.html
+++ b/hafta3.html
@@ -91,3 +91,79 @@
     </table>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        td {
+            padding: 10px;
+            border: 1px solid #ddd;
+        }
+    </style>
+</head>
+<body>
+    <h1>Lütfen Formu Eksiksiz Doldurunuz.</h1>
+    <hr>
+    <form>
+        <table>
+            <tr>
+                <td colspan="2"><h4>Hesap Bilgileriniz</h4></td>
+            </tr>
+            <tr>
+                <td>Kullanıcı Adı:</td>
+                <td><input type="text" name="username" placeholder="Kullanıcı adı giriniz" required></td>
+            </tr>
+            <tr>
+                <td>Eposta:</td>
+                <td><input type="email" name="eposta" placeholder="Eposta giriniz" required></td>
+            </tr>
+            <tr>
+                <td>Parola:</td>
+                <td><input type="password" name="parola" placeholder="Parola giriniz" required></td>
+            </tr>
+            <tr>
+                <td colspan="2"><h4>Kişisel Bilgileriniz</h4></td>
+            </tr>
+            <tr>
+                <td>Ad:</td>
+                <td><input type="text" name="ad"></td>
+            </tr>
+            <tr>
+                <td>Soyad:</td>
+                <td><input type="text" name="soyad"></td>
+            </tr>
+            <tr>
+                <td>Şehir:</td>
+                <td>
+                    <select name="sehir">
+                        <option>Seçiniz</option>
+                        <option>Ankara</option>
+                        <option>İstanbul</option>
+                        <option>Kocaeli</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Cinsiyet:</td>
+                <td>
+                    <input type="radio" name="cinsiyet" value="erkek"> Erkek
+                    <input type="radio" name="cinsiyet" value="kadin"> Kadın
+                </td>
+            </tr>
+            <tr>
+                <td>Hobileriniz:</td>
+                <td>
+                    <input type="checkbox" name="hobiler" value="sinema"> Sinema
+                    <input type="checkbox" name="hobiler" value="gezmek"> Gezmek
+                    <input type="checkbox" name="hobiler" value="spor"> Spor
+                    <input type="chec
+
