--- a/hafta3.html
+++ b/hafta3.html
@@ -165,4 +165,5 @@
                     <input type="checkbox" name="hobiler" value="sinema"> Sinema
                     <input type="checkbox" name="hobiler" value="gezmek"> Gezmek
                     <input type="checkbox" name="hobiler" value="spor"> Spor
-                    <input type="chec 
+                    <input type="checkbox" name="hobiler" value="kitap">Kitap 
+        </p> <input type="submit" value="Kaydet"> </form>
