--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
 <a href="hafta2.html">  Hafta 2 ödevi</a>
 
- <a href="Hafta3.html">  Hafta 3 ödevi</a> 
+ <a href="hafta3.html">  Hafta 3 ödevi</a> 
 </body>
