--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 <a href="hafta2.html">  Hafta 2 ödevi</a>
 
 <a href="hafta3.html">  Hafta 3 ödevi</a> 
+
+<a href="hafta4.html">  Hafta 4 ödevi</a> 
+
+<a href="hafta3.html">  Hafta 5 ödevi</a> 
+
+<a href="hafta3.html">  Hafta 6 ödevi</a> 
 </body>
