--- a/hafta4.html
+++ b/hafta4.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Üyelik Formu</title>
+</head>
+<body>
+    <h2>Üyelik Formu</h2>
+    <form action="submit_form.php" method="post">
+        <label for="name">Ad:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="surname">Soyad:</label>
+        <input type="text" id="surname" name="surname" required><br><br>
+
+        <label for="email">E-posta:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="password">Şifre:</label>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <label for="birthday">Doğum Tarihi:</label>
+        <input type="date" id="birthday" name="birthday"><br><br>
+
+        <label for="gender">Cinsiyet:</label>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male">Erkek</label>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female">Kadın</label><br><br>
+
+        <label for="country">Ülke:</label>
+        <select id="country" name="country">
+            <option value="turkey">Türkiye</option>
+            <option value="usa">Amerika</option>
+            <option value="germany">Almanya</option>
+            <option value="france">Fransa</option>
+        </select><br><br>
+
+        <label for="terms">Üyelik şartlarını kabul ediyorum</label>
+        <input type="checkbox" id="terms" name="terms" required><br><br>
+
+        <input type="submit" value="Kaydol">
+    </form>
+</body>
+</html>
 
