--- a/hafta3.html
+++ b/hafta3.html
@@ -35,25 +35,25 @@
         </tr>
         <tr>
             <td>Pazartesi</td>
-            <td>Ders 1</td>
-            <td>Ders 2</td>
-            <td>Ders 3</td>
-            <td>Öğle Arası</td>
-            <td>Ders 4</td>
-            <td>Ders 5</td>
-            <td>Ders 6</td>
-            <td>Ders 7</td>
+            <td>BTE307.01</td>
+            <td>BTE307.01</td>
+            <td>GKS104.01</td>
+            <td>GKS104.01</td>
+            <td>BOŞ</td>
+            <td>BTE307.01 LAB</td>
+            <td>BTE307.01 LAB</td>
+            <td>BOŞ</td>
         </tr>
         <tr>
             <td>Salı</td>
-            <td>Ders 1</td>
-            <td>Ders 2</td>
-            <td>Ders 3</td>
-            <td>Öğle Arası</td>
-            <td>Ders 4</td>
-            <td>Ders 5</td>
-            <td>Ders 6</td>
-            <td>Ders 7</td>
+            <td>BOŞ</td>
+            <td>BTE313</td>
+            <td>BTE313</td>
+            <td>BOŞ</td>
+            <td>BTE422</td>
+            <td>BTE422</td>
+            <td>BTE309</td>
+            <td>BTE309</td>
         </tr>
         <tr>
             <td>Çarşamba</td>
