--- a/hafta3.html
+++ b/hafta3.html
@@ -57,36 +57,36 @@
         </tr>
         <tr>
             <td>Çarşamba</td>
-            <td>Ders 1</td>
-            <td>Ders 2</td>
-            <td>Ders 3</td>
-            <td>Öğle Arası</td>
-            <td>Ders 4</td>
-            <td>Ders 5</td>
-            <td>Ders 6</td>
-            <td>Ders 7</td>
+            <td></td>
+            <td></td>
+            <td>EGT254.04</td>
+            <td>EGT254.04</td>
+            <td>BBM102.01</td>
+            <td>BBM102.01</td>
+            <td>BBM102.01</td>
+            <td></td>
         </tr>
         <tr>
             <td>Perşembe</td>
-            <td>Ders 1</td>
-            <td>Ders 2</td>
-            <td>Ders 3</td>
-            <td>Öğle Arası</td>
-            <td>Ders 4</td>
-            <td>Ders 5</td>
-            <td>Ders 6</td>
-            <td>Ders 7</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>EGT 304.02</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Cuma</td>
-            <td>Ders 1</td>
-            <td>Ders 2</td>
-            <td>Ders 3</td>
-            <td>Öğle Arası</td>
-            <td>Ders 4</td>
-            <td>Ders 5</td>
-            <td>Ders 6</td>
-            <td>Ders 7</td>
+            <td>BTE311</td>
+            <td>BTE311</td>
+            <td>BTE311 LAB</td>
+            <td>BTE311 LAB</td>
+            <td>EGT453.04</td>
+            <td>EGT453.04</td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
 </body>
