--- a/hafta3.html
+++ b/hafta3.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-    <h1>Lütfen Formu Eksiksiz Doldurunuz.</h1>
+    <h1>Lütfen formu eksiksiz doldurunuz.</h1>
     <hr>
     <form>
         <table>
@@ -123,7 +123,7 @@
                 <td><input type="text" name="username" placeholder="Kullanıcı adı giriniz" required></td>
             </tr>
             <tr>
-                <td>Eposta:</td>
+                <td>E-posta:</td>
                 <td><input type="email" name="eposta" placeholder="Eposta giriniz" required></td>
             </tr>
             <tr>
