--- a/hafta2.html
+++ b/hafta2.html
@@ -1,6 +1,5 @@
-<body>
-<a href="hafta1.html"> Masal Ödevi</a>
-<html>
+<!DOCTYPE html>
+<html lang="tr">
 <head>
     <meta charset="utf-8">
     <title>Web Programlama Masal Ödevi</title>
@@ -22,34 +21,50 @@
 <section id="bolum1">
     <h2>Bölüm 1: Kaybolan Gün</h2>
     <img src="hafta2images/resim1.jpg" alt="Kaybolan Gün" style="max-width:100%; height:auto;">
-    <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı. Ancak bu sabah, her zamankinden farklıydı. Gökyüzü gri bulutlarla kaplıydı ve rüzgar, ince bir hüzünle esiyordu. Elif, köyün dışında yer alan ormana doğru yürümeye karar verdi. Ormanın derinliklerinde kaybolmuş eski bir efsanenin peşindeydi. Efsaneye göre, ormanın derinliklerinde kaybolan bir gün, tekrar bulunmayı bekliyordu.</p>
-<figure>
-  <figcaption>1. Bölümü Dinle:</figcaption>
-  <audio controls src="hafta2sesler/m1.mp3">
-    <a href="hafta2sesler/m1.mp3"> Download audio </a>
-  </audio>
-</figure>
-
+    <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı. Ancak bu sabah, her zamankinden farklıydı...</p>
+    <figure>
+        <figcaption>1. Bölümü Dinle:</figcaption>
+        <audio controls src="hafta2sesler/m1.mp3">
+            <a href="hafta2sesler/m1.mp3">Download audio</a>
+        </audio>
+    </figure>
 </section>
 
 <section id="bolum2">
     <h2>Bölüm 2: Ormanın Sırrı</h2>
     <img src="hafta2images/resim2.jpg" alt="Ormanın Sırrı" style="max-width:100%; height:auto;">
-    <p>Ormana girdiğinde, Elif bir an için tereddüt etti. Ağaçların arasında ilerledikçe, karanlık gölgelerin arasında kaybolmuş gibi hissetti. Ancak cesaretini toplayarak ilerlemeye devam etti. Bir süre sonra, karşısına devasa bir çam ağacı çıktı. Ağacın etrafında, eski bir taş döşemesi vardı. Elif, merakla taşların üzerine adım attı. Her adımında bir melodinin yankılandığını hissetti. Melodi, ona kaybolmuş günün sesi gibi geliyordu.</p>
+    <p>Ormana girdiğinde, Elif bir an için tereddüt etti. Ağaçların arasında ilerledikçe, karanlık gölgelerin arasında kaybolmuş gibi hissetti...</p>
+    <figure>
+        <figcaption>2. Bölümü Dinle:</figcaption>
+        <audio controls src="hafta2sesler/m2.mp3">
+            <a href="hafta2sesler/m2.mp3">Download audio</a>
+        </audio>
+    </figure>
 </section>
 
 <section id="bolum3">
     <h2>Bölüm 3: Yeniden Doğuş</h2>
     <img src="hafta2images/resim3.jpg" alt="Yeniden Doğuş" style="max-width:100%; height:auto;">
-    <p>Elif, melodinin peşinden yürümeye devam etti. Taş döşemesi onu derin bir çukura yönlendirdi. Çukurun içinde, büyülü bir ışık parıldıyordu. Elif, ışığa doğru yaklaştıkça, kaybolmuş günün yansımasını gördü. Bu, geçen zamanın anılarını taşıyan bir günün görüntüsüydü. Birden, kaybolmuş gün bir bedene büründü; Elif’in karşısında genç bir kız belirdi. Kız, gülümseyerek Elif’e, “Beni buldun. Şimdi seni de özgür bırakabilirim,” dedi.</p>
+    <p>Elif, melodinin peşinden yürümeye devam etti. Taş döşemesi onu derin bir çukura yönlendirdi...</p>
+    <figure>
+        <figcaption>3. Bölümü Dinle:</figcaption>
+        <audio controls src="hafta2sesler/m3.mp3">
+            <a href="hafta2sesler/m3.mp3">Download audio</a>
+        </audio>
+    </figure>
 </section>
 
 <section id="bolum4">
     <h2>Bölüm 4: Yeni Başlangıç</h2>
     <img src="hafta2images/resim4.jpg" alt="Yeni Başlangıç" style="max-width:100%; height:auto;">
-    <p>Kız, Elif’in elini tuttu ve ışık içinde kayboldu. Elif, bir an için her şeyin karardığını hissetti ama sonra gözlerini açtığında, ormanın dışındaki güneşli alana ulaşmıştı. Gözleri parlıyordu; çünkü artık geçmişin yüklerinden kurtulmuştu. Elif, o günden sonra kaybolmuş günlerin efsanesini köyde anlatmaya başladı. Herkes, Elif’in hikayesini dinlerken umut buldu ve kaybolmuş anıların, yeniden doğuşun kapısını aralayabileceğini öğrendi. Ormanın sırrı, köyde yeni bir başlangıcın simgesi haline geldi.</p>
+    <p>Kız, Elif’in elini tuttu ve ışık içinde kayboldu. Elif, bir an için her şeyin karardığını hissetti ama sonra gözlerini açtığında...</p>
+    <figure>
+        <figcaption>4. Bölümü Dinle:</figcaption>
+        <audio controls src="hafta2sesler/m4.mp3">
+            <a href="hafta2sesler/m4.mp3">Download audio</a>
+        </audio>
+    </figure>
 </section>
 
 </body>
 </html>
-</body>
