--- a/hafta5.html
+++ b/hafta5.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Görev 2 - Daireler</title>
+    <style>
+        /* Ortak daire stilini tanımlayın */
+        .circle {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            position: absolute;
+            opacity: 0.6;
+        }
+
+        /* Her bir daire için renk ve konum ayarlayın */
+        .circle1 {
+            background-color: orange;
+            top: 50px;
+            left: 80px;
+        }
+
+        .circle2 {
+            background-color: blue;
+            top: 50px;
+            left: 150px;
+        }
+
+        .circle3 {
+            background-color: yellow;
+            top: 120px;
+            left: 115px;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Üç tane daire oluşturun -->
+    <div class="circle circle1"></div>
+    <div class="circle circle2"></div>
+    <div class="circle circle3"></div>
+
+</body>
+</html>
 
