--- a/hafta5.html
+++ b/hafta5.html
@@ -16,25 +16,34 @@
 
         /* Her bir daire için renk ve konum ayarlayın */
         .circle1 {
-            background-color: orange;
-            top: 50px;
+            background-color: #FF8C69; /* Turuncu ton */
+            top: 80px;
             left: 80px;
         }
 
         .circle2 {
-            background-color: blue;
-            top: 50px;
+            background-color: #8A2BE2; /* Mor ton */
+            top: 80px;
             left: 150px;
         }
 
         .circle3 {
-            background-color: yellow;
-            top: 120px;
+            background-color: #FFFF99; /* Sarı ton */
+            top: 150px;
             left: 115px;
+        }
+
+        /* Başlık için stil */
+        h1 {
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
+
+    <!-- Görev başlığı -->
+    <h1>Görev 2</h1>
 
     <!-- Üç tane daire oluşturun -->
     <div class="circle circle1"></div>
@@ -43,4 +52,3 @@
 
 </body>
 </html>
-
