--- a/hafta5.html
+++ b/hafta5.html
@@ -26,6 +26,7 @@
         .circle-container {
             margin-top: 40px; /* Başlıktan sonra boşluk bırakmak için */
             position: relative;
+            height: 200px; /* Dairelerin yerleşeceği alan */
         }
 
         .circle {
