--- a/hafta5.html
+++ b/hafta5.html
@@ -1,3 +1,160 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Haftalık Ders Programı</title>
+    <style>
+        /* Internal CSS - 2. Kopya */
+        .internal-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        .internal-table th, .internal-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+        .internal-table th {
+            background-color: #e0e0e0;
+        }
+    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS bağlantısı -->
+</head>
+<body>
+    <h1>Haftalık Ders Programı</h1>
+
+    <!-- Inline CSS - 1. Kopya -->
+    <h2>Tablo 1: Inline CSS</h2>
+    <table style="width: 100%; border-collapse: collapse;">
+        <tr>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">Gün</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">08:40 - 09:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">09:40 - 10:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">10:40 - 11:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">11:40 - 12:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">12:40 - 13:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">13:40 - 14:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">14:40 - 15:30</th>
+        </tr>
+        <tr>
+            <td>Pazartesi</td>
+            <td>BTE307.01</td>
+            <td>BTE307.01</td>
+            <td>GKS104.01</td>
+            <td>GKS104.01</td>
+            <td></td>
+            <td>BTE307.01 LAB</td>
+            <td>BTE307.01 LAB</td>
+        </tr>
+        <tr>
+            <td>Salı</td>
+            <td></td>
+            <td>BTE313</td>
+            <td>BTE313</td>
+            <td></td>
+            <td>BTE422</td>
+            <td>BTE422</td>
+            <td>BTE309</td>
+        </tr>
+        <tr>
+            <td>Çarşamba</td>
+            <td></td>
+            <td></td>
+            <td>EGT254.04</td>
+            <td>EGT254.04</td>
+            <td>BBM102.01</td>
+            <td>BBM102.01</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Perşembe</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>EGT 304.02</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Cuma</td>
+            <td>BTE311</td>
+            <td>BTE311</td>
+            <td>BTE311 LAB</td>
+            <td>BTE311 LAB</td>
+            <td>EGT453.04</td>
+            <td>EGT453.04</td>
+            <td></td>
+        </tr>
+    </table>
+
+    <!-- Internal CSS - 2. Kopya -->
+    <h2>Tablo 2: Internal CSS</h2>
+    <table class="internal-table">
+        <tr>
+            <th>Gün</th>
+            <th>08:40 - 09:30</th>
+            <th>09:40 - 10:30</th>
+            <th>10:40 - 11:30</th>
+            <th>11:40 - 12:30</th>
+            <th>12:40 - 13:30</th>
+            <th>13:40 - 14:30</th>
+            <th>14:40 - 15:30</th>
+        </tr>
+        <tr>
+            <td>Pazartesi</td>
+            <td>BTE307.01</td>
+            <td>BTE307.01</td>
+            <td>GKS104.01</td>
+            <td>GKS104.01</td>
+            <td></td>
+            <td>BTE307.01 LAB</td>
+            <td>BTE307.01 LAB</td>
+        </tr>
+        <tr>
+            <td>Salı</td>
+            <td></td>
+            <td>BTE313</td>
+            <td>BTE313</td>
+            <td></td>
+            <td>BTE422</td>
+            <td>BTE422</td>
+            <td>BTE309</td>
+        </tr>
+        <tr>
+            <td>Çarşamba</td>
+            <td></td>
+            <td></td>
+            <td>EGT254.04</td>
+            <td>EGT254.04</td>
+            <td>BBM102.01</td>
+            <td>BBM102.01</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Perşembe</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>EGT 304.02</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Cuma</td>
+            <td>BTE311</td>
+            <td>BTE311</td>
+            <td>BTE311 LAB</td>
+            <td>BTE311 LAB</td>
+            <td>EGT453.04</td>
+            <td>EGT453.04</td>
+            <td></td>
+        </tr>
+    </table>
+</body>
+</html>
 
 
 <!DOCTYPE html>
