--- a/hafta5.html
+++ b/hafta5.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haftalık Ders Programı</title>
+    <title>Görev 1 ve Görev 2</title>
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS için ayrı dosya bağlantısı -->
+
     <style>
-        /* Internal CSS - 2. Kopya */
+        /* Görev 1 - 2. Kopya İçin Internal CSS */
         .internal-table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
         .internal-table th, .internal-table td {
             border: 1px solid #ddd;
@@ -16,80 +19,71 @@
             text-align: center;
         }
         .internal-table th {
-            background-color: #e0e0e0;
+            background-color: #f2f2f2;
+        }
+
+        /* Görev 2 - Internal CSS */
+        .circle {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            position: absolute;
+            opacity: 0.6;
+        }
+
+        .circle1 {
+            background-color: #FF8C69;
+            top: 50px;
+            left: 100px;
+        }
+
+        .circle2 {
+            background-color: #8A2BE2;
+            top: 50px;
+            left: 170px;
+        }
+
+        .circle3 {
+            background-color: #FFFF99;
+            top: 120px;
+            left: 135px;
         }
     </style>
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS bağlantısı -->
 </head>
 <body>
-    <h1>Haftalık Ders Programı</h1>
 
-    <!-- Inline CSS - 1. Kopya -->
+    <!-- Görev 1 Başlığı -->
+    <h1>Görev 1: Ders Programı Tabloları</h1>
+
+    <!-- Inline CSS ile tablo - İlk Kopya -->
     <h2>Tablo 1: Inline CSS</h2>
     <table style="width: 100%; border-collapse: collapse;">
         <tr>
             <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">Gün</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">08:40 - 09:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">09:40 - 10:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">10:40 - 11:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">11:40 - 12:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">12:40 - 13:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">13:40 - 14:30</th>
-            <th style="border: 1px solid #ddd; padding: 8px; background-color: #f2f2f2;">14:40 - 15:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">08:40 - 09:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">09:40 - 10:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">10:40 - 11:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">11:40 - 12:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">12:40 - 13:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">13:40 - 14:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">14:40 - 15:30</th>
+            <th style="border: 1px solid #ddd; padding: 8px;">15:40 - 16:30</th>
         </tr>
         <tr>
-            <td>Pazartesi</td>
-            <td>BTE307.01</td>
-            <td>BTE307.01</td>
-            <td>GKS104.01</td>
-            <td>GKS104.01</td>
-            <td></td>
-            <td>BTE307.01 LAB</td>
-            <td>BTE307.01 LAB</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">Pazartesi</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">BTE307.01</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">BTE307.01</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">GKS104.01</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">GKS104.01</td>
+            <td style="border: 1px solid #ddd; padding: 8px;"></td>
+            <td style="border: 1px solid #ddd; padding: 8px;">BTE307.01 LAB</td>
+            <td style="border: 1px solid #ddd; padding: 8px;">BTE307.01 LAB</td>
+            <td style="border: 1px solid #ddd; padding: 8px;"></td>
         </tr>
-        <tr>
-            <td>Salı</td>
-            <td></td>
-            <td>BTE313</td>
-            <td>BTE313</td>
-            <td></td>
-            <td>BTE422</td>
-            <td>BTE422</td>
-            <td>BTE309</td>
-        </tr>
-        <tr>
-            <td>Çarşamba</td>
-            <td></td>
-            <td></td>
-            <td>EGT254.04</td>
-            <td>EGT254.04</td>
-            <td>BBM102.01</td>
-            <td>BBM102.01</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Perşembe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>EGT 304.02</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Cuma</td>
-            <td>BTE311</td>
-            <td>BTE311</td>
-            <td>BTE311 LAB</td>
-            <td>BTE311 LAB</td>
-            <td>EGT453.04</td>
-            <td>EGT453.04</td>
-            <td></td>
-        </tr>
+        <!-- Diğer satırları buraya ekleyebilirsiniz -->
     </table>
 
-    <!-- Internal CSS - 2. Kopya -->
+    <!-- Internal CSS ile tablo - İkinci Kopya -->
     <h2>Tablo 2: Internal CSS</h2>
     <table class="internal-table">
         <tr>
@@ -101,6 +95,7 @@
             <th>12:40 - 13:30</th>
             <th>13:40 - 14:30</th>
             <th>14:40 - 15:30</th>
+            <th>15:40 - 16:30</th>
         </tr>
         <tr>
             <td>Pazartesi</td>
@@ -111,89 +106,41 @@
             <td></td>
             <td>BTE307.01 LAB</td>
             <td>BTE307.01 LAB</td>
-        </tr>
-        <tr>
-            <td>Salı</td>
-            <td></td>
-            <td>BTE313</td>
-            <td>BTE313</td>
-            <td></td>
-            <td>BTE422</td>
-            <td>BTE422</td>
-            <td>BTE309</td>
-        </tr>
-        <tr>
-            <td>Çarşamba</td>
-            <td></td>
-            <td></td>
-            <td>EGT254.04</td>
-            <td>EGT254.04</td>
-            <td>BBM102.01</td>
-            <td>BBM102.01</td>
             <td></td>
         </tr>
-        <tr>
-            <td>Perşembe</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>EGT 304.02</td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>Cuma</td>
-            <td>BTE311</td>
-            <td>BTE311</td>
-            <td>BTE311 LAB</td>
-            <td>BTE311 LAB</td>
-            <td>EGT453.04</td>
-            <td>EGT453.04</td>
-            <td></td>
-        </tr>
+        <!-- Diğer satırları buraya ekleyebilirsiniz -->
     </table>
-</body>
-</html>
 
+    <!-- External CSS ile tablo - Üçüncü Kopya -->
+    <h2>Tablo 3: External CSS</h2>
+    <table class="external-table">
+        <tr>
+            <th>Gün</th>
+            <th>08:40 - 09:30</th>
+            <th>09:40 - 10:30</th>
+            <th>10:40 - 11:30</th>
+            <th>11:40 - 12:30</th>
+            <th>12:40 - 13:30</th>
+            <th>13:40 - 14:30</th>
+            <th>14:40 - 15:30</th>
+            <th>15:40 - 16:30</th>
+        </tr>
+        <tr>
+            <td>Pazartesi</td>
+            <td>BTE307.01</td>
+            <td>BTE307.01</td>
+            <td>GKS104.01</td>
+            <td>GKS104.01</td>
+            <td></td>
+            <td>BTE307.01 LAB</td>
+            <td>BTE307.01 LAB</td>
+            <td></td>
+        </tr>
+        <!-- Diğer satırları buraya ekleyebilirsiniz -->
+    </table>
 
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Görev 2: Daireler</title>
-    <style>
-        /* Ortak daire stilini tanımlayın */
-        .circle {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            position: absolute;
-            opacity: 0.6;
-        }
-
-        /* Her bir daire için renk ve konum ayarlayın */
-        .circle1 {
-            background-color: orange;
-            top: 50px;
-            left: 80px;
-        }
-
-        .circle2 {
-            background-color: blue;
-            top: 50px;
-            left: 150px;
-        }
-
-        .circle3 {
-            background-color: yellow;
-            top: 120px;
-            left: 115px;
-        }
-    </style>
-</head>
-<body>
+    <!-- Görev 2 Başlığı -->
+    <h1>Görev 2: Daireler</h1>
 
     <!-- Üç tane daire oluşturun -->
     <div class="circle circle1"></div>
