--- a/hafta3.html
+++ b/hafta3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haftalık Ders Programı</title>
+    <title>Haftalık Ders Programı ve Form</title>
     <style>
         table {
             width: 100%;
